<resources>
    <string name="app_name">Weight Mate</string>

    <string name="profile_name">Name Lastname</string>
    <string name="profile_weight_current">Weight:</string>

    <!-- Profile Strings -->
    <string name="profile_weight_placeholder">150.0</string>
    <string name="profile_weight_goal">Goal:</string>
    <string name="profile_start_date">Start Date:</string>
    <string name="profile_date_placeholder">01/01/1970</string>
    <string name="profile_goals">Goal Tracker</string>
    <string name="profile_stats">Stats</string>

    <string name="profile_log_view">View Meal Log</string>
    <string name="profile_log_edit">Edit Meal Log</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>

    <string name="units_freedom">lbs</string>
    <string name="units_metric">kgs</string>

    <string name="edit">Edit</string>
    <string name="settings_notifications">Allow Notifications</string>
    <string name="settings_reset">Reset Settings</string>


    <string name="listMealPlaceholder">N/A</string>
    <string name="listMealTitle1"><u>Today\'s Meal Summary:</u></string>
    <string name="listMealTitle2"><u>Total Nutrition Remaining:</u></string>

    <string name="listmealentryMealName"><u>Meal Name Placeholder</u></string>
    <string name="listmealentryMealCalories">Meal Calories Placeholder</string>
    <string name="listmealentryMealProtein">Meal Protein Placeholder</string>
    <string name="listmealentryMealCarbs">Meal Carbs Placeholder</string>
    <string name="listmealentryMealFat">Meal Fat Placeholder</string>


    <!-- Settings Strings -->
    <string name="settings_delete">Delete Account</string>
    <string name="settings_units">Preferred Units</string>
    <string name="settings_confirm">Confirm Changes</string>
    <string-array name="Goals">
        <item>Maintain Weight</item>
        <item>Lose Weight</item>
        <item>Gain Weight</item>
    </string-array>
    <string-array name="ActivityLevels">
        <item>Sedentary</item>
        <item>Lightly Active</item>
        <item>Moderately Active</item>
        <item>Very Active</item>
    </string-array>

    <string-array name="unit_names">
        <item>Imperial(lbs)</item>
        <item>Metric(kgs)</item>
    </string-array>

</resources>
