<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/mealName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:text="@string/listmealentryMealName" />

    <TextView
        android:id="@+id/mealCalories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/listmealentryMealCalories" />

    <TextView
        android:id="@+id/mealProtein"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/listmealentryMealProtein" />

    <TextView
        android:id="@+id/mealCarbs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/listmealentryMealCarbs" />

    <TextView
        android:id="@+id/mealFat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/listmealentryMealFat" />
</LinearLayout>