<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

<!--  Header  -->
    <LinearLayout
        android:id="@+id/profile_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/profile_image"
            android:layout_width="130dp"
            android:layout_height="130dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/profile_name"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_start_date"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/profile_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:text="@string/profile_date_placeholder"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_weight_current"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/profile_weight_currentval"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:text="@string/profile_weight_placeholder"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/profile_units1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:text="@string/units_freedom"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_weight_goal"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/profile_weight_goalval"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:text="@string/profile_weight_placeholder"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/profile_units2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:text="@string/units_freedom"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/profile_divider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@+id/profile_header"
        android:background="?android:attr/listDivider" />

<!--  Body  -->
    <ScrollView
        android:id="@+id/profile_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/profile_divider"
        android:layout_above="@id/profile_footer"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/profile_stats"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/profile_stats" />

            <Button
                android:id="@+id/profile_goals"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/profile_goals" />

            <Button
                android:id="@+id/profile_log_view"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/profile_log_view" />

            <Button
                android:id="@+id/profile_log_edit"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/profile_log_edit" />

        </LinearLayout>
    </ScrollView>

    <View
        android:id="@+id/profile_divider2"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="?android:attr/listDivider"
        android:layout_above="@id/profile_footer"/>

<!-- Footer -->
    <LinearLayout
        android:id="@+id/profile_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/profile_settings"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="#FF4B4B"
            android:text="@string/settings" />

        <Button
            android:id="@+id/profile_logout"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="#FF4B4B"
            android:text="@string/logout" />
    </LinearLayout>

</RelativeLayout>