<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ListMealActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/listmeal_Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/listMealTitle1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="25dp" >

            <TextView
                android:id="@+id/listmealTitleCalories"
                android:layout_width="164dp"
                android:layout_height="wrap_content"
                android:text="Total Calories:"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/listmealTotalCalories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listMealPlaceholder" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/listMealTitleProtein"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Total Protein:"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/listMealTotalProtein"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listMealPlaceholder" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/listMealTitleCarbs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Total Carbs:"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/listMealTotalCarbs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listMealPlaceholder" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/listMealTitleFat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Total Fat:"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/listMealTotalFat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listMealPlaceholder" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/listmeal_Title2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/listMealTitle2"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/listmealTitleCalories2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Remaining Calories:"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/listmealTotalCalories2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listMealPlaceholder" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/listMealTitleProtein2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Remaining Protein:"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/listMealTotalProtein2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listMealPlaceholder" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/listMealTitleCarbs2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Remaining Carbs:"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/listMealTotalCarbs2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listMealPlaceholder" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/listMealTitleFat2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Remaining Fat:"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/listMealTotalFat2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listMealPlaceholder" />
        </TableRow>
    </TableLayout>

</LinearLayout>